--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "next": "12.0.7",
     "qrcode": "^1.5.0",
     "react": "17.0.2",
+    "react-calendar": "^3.5.0",
     "react-dom": "17.0.2",
-    "recoil": "^0.5.2"
+    "recoil": "^0.5.2",
+    "sweetalert2": "^11.3.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.0",
